k8s/my-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.ibarrera.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itlinfodocker-service
            port:
              number: 80
